# dqnTurtlebot

./: .gitattributes  .gitignore  .gitmodules  README.md  environment.yml  requirements.txt
turt_q_learn/: CMakeLists.txt  package.xml
turt_q_learn/dqnmodels/mySession - 2019-09-05-03-30-58/: allParams.txt  envVars.txt
turt_q_learn/dqnmodels/mySession - 2019-09-05-03-30-58/myModel - 2019-09-05-03-30-59/: model  params.txt
turt_q_learn/dqnmodels/mySession - 2019-09-05-03-30-58/myModel - 2019-09-05-07-31-01/: model  params.txt
turt_q_learn/dqnmodels/mySession - 2019-09-05-13-15-24/: allParams.txt  bestParams.txt  envVars.txt
turt_q_learn/dqnmodels/mySession - 2019-09-05-13-15-24/myModel - 2019-09-05-13-15-25/: model
turt_q_learn/dqnmodels/mySession - 2019-09-06-18-11-58/: allParams.txt  bestParams.txt
turt_q_learn/dqnmodels/mySession - 2019-09-06-18-11-58/myModel - 2019-09-06-18-11-59/: model
turt_q_learn/dqnmodels/mySession - 2019-09-07-11-41-27/: allParams.txt
turt_q_learn/dqnmodels/mySession - 2019-09-07-11-41-27/myModel - 2019-09-07-11-41-28/: model  params.txt
turt_q_learn/dqnmodels/mySession - 2019-11-14-02-10-11/: allParams.txt
turt_q_learn/dqnmodels/mySession - 2019-11-17-20-42-09/: allParams.txt  envVars.txt
turt_q_learn/dqnmodels/mySession - 2019-11-17-20-52-36/: allParams.txt  envVars.txt
turt_q_learn/launch/: brick_world.launch
turt_q_learn/map/: map.pgm  map.yaml
turt_q_learn/models/brick_world/: model.sdf
turt_q_learn/scripts/: cmder.py  pathfinder.py  scanSub.py  turt_q_learn_hypers.py
